[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/objects/SecondJump/SecondJump.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/second_jump.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 4, 4 )

[node name="SecondJump" type="Area2D"]
scale = Vector2( 10, 10 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
